--- a/MapTest/MapTest/MainWindow.xaml
+++ b/MapTest/MapTest/MainWindow.xaml
@@ -14,10 +14,51 @@
                 <MenuItem Header="File"/>
                 <MenuItem Header="Map"/>
                 <MenuItem Header="Search Tour"/>
+                <MenuItem Header="Login"/>
+                
             </Menu>
+            
             <StatusBar DockPanel.Dock="Bottom">
                 <TextBox Name="currentPosition"/>
-            </StatusBar>            
+            </StatusBar> 
+            <WrapPanel DockPanel.Dock="Right" Width="200" Orientation="Vertical">
+              
+                <Label Grid.Row="1" Grid.ColumnSpan="3" Content="New Trip" VerticalAlignment="Center"/>
+                <Separator/>
+                <WrapPanel Orientation="Horizontal" Margin="0,10,0,0">
+                   <Label Content="Start"/>
+                    <TextBox Text="" Width="150" />
+                    <Label Content="Date"/>
+                    <DatePicker Width="150"/>
+                    <Label Content="Time"/>
+                    <TextBox Text="" Width="150"/>
+                </WrapPanel>
+                <Separator/>
+                <WrapPanel Orientation="Horizontal" Margin="0,10,0,0">
+                    <Label Content="End / Stop"/>
+                    <TextBox Text="" Width="100" />
+                    <Button Content=" + "/>
+                    <Label Content="Date"/>
+                    <DatePicker Width="150"/>
+                    <Label Content="Time"/>
+                    <TextBox Text="" Width="150"/>
+                </WrapPanel>
+                <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,100,0,0">
+                    <Button Content="Save" Width="50" />
+                </WrapPanel>
+            </WrapPanel>
+            <WrapPanel DockPanel.Dock="Left" Width="100" Orientation="Vertical">
+                <WrapPanel Orientation="Vertical">
+                    <Label Content="Friend"/>
+                    <ListView Height="100" Width="90"/>
+                </WrapPanel>
+                <Separator Margin="0,10,0,0"/>
+                <WrapPanel>
+                    <Label Content="Messages"/>
+                    <ListView Height="100" Width="90"/>
+                </WrapPanel>
+            </WrapPanel>
+            
             <m:Map Name="MyMap" MouseRightButtonDown="MyMap_MouseRightButtonDown"  CredentialsProvider="AhOYVsCHeLfCM2LttVNiVAK6mUGtJmjRlevk_2qjuzV9J-gNrsj6z6MD5XREJN1h"/>
 
         </DockPanel>
