--- a/WMRApp/Registration.xaml
+++ b/WMRApp/Registration.xaml
@@ -4,12 +4,13 @@
   </Window.Background>
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="112*" />
-      <RowDefinition Height="44*" />
-      <RowDefinition Height="44*" />
-      <RowDefinition Height="44*" />
-      <RowDefinition Height="44*" />
-      <RowDefinition Height="148*" />
+      <RowDefinition Height="133*" />
+      <RowDefinition Height="52*" />
+      <RowDefinition Height="52*" />
+      <RowDefinition Height="52*" />
+      <RowDefinition Height="54*" />
+      <RowDefinition Height="51*" />
+      <RowDefinition Height="175*" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="475*" />
@@ -19,11 +20,13 @@
     <Label Grid.Column="1" Grid.Row="1" Content="Name:" Foreground="#5ff" Margin="5" FontSize="22"></Label>
     <Label Grid.Column="1" Grid.Row="2" Content="User Name:" Foreground="#5ff" Margin="5" FontSize="22"></Label>
     <Label Grid.Column="1" Grid.Row="3" Content="Password:" Foreground="#5ff" Margin="5" FontSize="22"></Label>
-    <TextBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Margin="0 0 30 0"></TextBox>
-    <TextBox Grid.Column="2" Grid.Row="2" VerticalAlignment="Center" Margin="0 0 30 0"></TextBox>
-    <TextBox Grid.Column="2" Grid.Row="3" VerticalAlignment="Center" Margin="0 0 30 0"></TextBox>
-    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" Margin="60 15 60 0">
-      <Button Width="90" Height="50" Content="Cancel" Margin="20 0" Background="#466" Foreground="#eee" VerticalAlignment="Center" ></Button>
+    <TextBlock Grid.Column="1" Grid.Row="4" Text="Confirm Password:" Foreground="#5ff" Margin="5 0" FontSize="22" TextWrapping="Wrap"></TextBlock>
+    <TextBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Margin="0,13,30,13" Height="26"></TextBox>
+    <TextBox Grid.Column="2" Grid.Row="2" VerticalAlignment="Center" Margin="0,13,30,13" Height="26"></TextBox>
+    <TextBox Grid.Column="2" Grid.Row="3" VerticalAlignment="Center" Margin="0,13,30,13" Height="26"></TextBox>
+    <TextBox Grid.Column="2" Grid.Row="4" VerticalAlignment="Center" Margin="0,13,30,15" Height="26"></TextBox>
+    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" Margin="60 15 60 0">
+      <Button Width="90" Height="50" Content="Cancel" Margin="20 0" Background="#466" Foreground="#eee" VerticalAlignment="Center"></Button>
       <Button Width="90" Height="50" Content="Register" Margin="20 0" Background="#466" Foreground="#eee" VerticalAlignment="Center"></Button>
     </StackPanel>
   </Grid>
