--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -16,8 +16,8 @@
     </Grid.ColumnDefinitions>
     <Label Content="User Name:" Grid.Column="1" Grid.Row="1" FontSize="18" Foreground="#2ef" Margin="10"></Label>
     <Label Content="Password:" Grid.Column="1" Grid.Row="2" FontSize="20" Foreground="#2ef" Margin="10"></Label>
-    <TextBox Grid.Column="2" Grid.Row="1" Margin="10 10 25 10" Background="#23f4" Padding="5"></TextBox>
-    <TextBox Grid.Column="2" Grid.Row="2" Margin="10 10 25 10" Background="#23f4" Padding="5"></TextBox>
+    <TextBox Grid.Column="2" Grid.Row="1" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="tbUserName"></TextBox>
+    <PasswordBox Grid.Column="2" Grid.Row="2" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="pwbPassword"></PasswordBox>
     <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="60 5">
       <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="30 10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
       <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
