--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -1,26 +1,43 @@
-﻿<Window x:Class="WMRApp.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:WMRApp" mc:Ignorable="d" Title="MainWindow" Height="600" Width="880" WindowStartupLocation="CenterScreen" FontSize="18">
-  <Window.Background>
-    <ImageBrush ImageSource="Images/street.jpeg"></ImageBrush>
-  </Window.Background>
+﻿<Window x:Class="WMRApp.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WMRApp"
+        xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
+        mc:Ignorable="d"
+        Title="Platform" Height="700" Width="1200" WindowStartupLocation="CenterScreen">
   <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="202*" />
-      <RowDefinition Height="33*" />
-      <RowDefinition Height="30*" />
-      <RowDefinition Height="54*" />
-    </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="247*" />
-      <ColumnDefinition Width="66*" />
-      <ColumnDefinition Width="123*" />
+      <ColumnDefinition Width="3*"/>
+      <ColumnDefinition Width="5*"/>
+      <ColumnDefinition Width="3*"/>
     </Grid.ColumnDefinitions>
-    <Label Content="User Name:" Grid.Column="1" Grid.Row="1" FontSize="18" Foreground="#2ef" Margin="10"></Label>
-    <Label Content="Password:" Grid.Column="1" Grid.Row="2" FontSize="20" Foreground="#2ef" Margin="10"></Label>
-    <TextBox Grid.Column="2" Grid.Row="1" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="tbUserName" Foreground="#fff"></TextBox>
-    <PasswordBox Grid.Column="2" Grid.Row="2" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="pwbPassword"></PasswordBox>
-    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="60 5">
-      <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="30 10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
-      <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
-    </StackPanel>
+    <Grid Grid.Column="1" HorizontalAlignment="Left" Height="649" Margin="10,10,0,0" VerticalAlignment="Top" Width="522">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="8*"/>
+        <RowDefinition Height="1*"/>
+      </Grid.RowDefinitions>
+      <m:Map Grid.Row="0" Name="MyMap" CredentialsProvider="AhOYVsCHeLfCM2LttVNiVAK6mUGtJmjRlevk_2qjuzV9J-gNrsj6z6MD5XREJN1h"/>
+    </Grid>
+    <Grid HorizontalAlignment="Left" Height="649" Margin="10,10,0,0" VerticalAlignment="Top" Width="305">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="6*"/>
+        <RowDefinition Height="2*"/>
+        <RowDefinition Height="8*"/>
+      </Grid.RowDefinitions>
+      <ListView Name="lvUsers" Grid.Row="0" />
+      <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
+        <Button Name="btnChat" Width="60" Margin="10" Content="Send"/>
+      </StackPanel>
+    </Grid>
+    <Grid Grid.Column="2" HorizontalAlignment="Left" Height="649" Margin="10,10,0,0" VerticalAlignment="Top" Width="315">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="288*"/>
+        <RowDefinition Height="300*"/>
+        <RowDefinition Height="61*"/>
+      </Grid.RowDefinitions>
+    </Grid>
   </Grid>
 </Window>
