--- a/WMRApp/Login.xaml
+++ b/WMRApp/Login.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WMRApp.Login" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:WMRApp" mc:Ignorable="d" Title="MainWindow" Height="600" Width="880" WindowStartupLocation="CenterScreen" FontSize="18">
+﻿<Window x:Class="WMRApp.Login" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:WMRApp" mc:Ignorable="d" Title="Login" Height="600" Width="880" WindowStartupLocation="CenterScreen" FontSize="18">
   <Window.Background>
     <ImageBrush ImageSource="Images/street.jpeg"></ImageBrush>
   </Window.Background>
@@ -18,8 +18,9 @@
     <Label Content="Password:" Grid.Column="1" Grid.Row="2" FontSize="20" Foreground="#2ef" Margin="10"></Label>
     <TextBox Grid.Column="2" Grid.Row="1" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="tbUserName" Foreground="#fff"></TextBox>
     <PasswordBox Grid.Column="2" Grid.Row="2" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="pwbPassword"></PasswordBox>
-    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="60 5">
-      <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="30 10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
+    <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="5">
+      <Button Name="btnCancel" Click="btnCancel_Click" Content="Cancel" Margin="10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
+      <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
       <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
     </StackPanel>
   </Grid>
