--- a/MapTest/MapTest/MainWindow.xaml
+++ b/MapTest/MapTest/MainWindow.xaml
@@ -34,15 +34,7 @@
                     <TextBox Text="" Width="150"/>
                 </WrapPanel>
                 <Separator Margin="0,10,0,0"/>
-                <WrapPanel Orientation="Horizontal" Margin="0,10,0,0">
-                    <Label Content="End / Stop"/>
-                    <TextBox Text="" Width="100" />
-                    <Button Content=" + "/>
-                    <Label Content="Date"/>
-                    <DatePicker Width="150"/>
-                    <Label Content="Time"/>
-                    <TextBox Text="" Width="150"/>
-                </WrapPanel>
+                <WrapPanel Orientation="Horizontal" Margin="0,10,0,0"/>
                 <WrapPanel HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,100,0,0">
                     <Button Content="Save" Width="50" />
                 </WrapPanel>
