--- a/WMRApp/Login.xaml
+++ b/WMRApp/Login.xaml
@@ -19,9 +19,9 @@
     <TextBox Grid.Column="2" Grid.Row="1" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="tbUserName" Foreground="#fff"></TextBox>
     <PasswordBox Grid.Column="2" Grid.Row="2" Margin="10 10 25 10" Background="#23f4" Padding="5" Name="pwbPassword"></PasswordBox>
     <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="5">
-      <Button Name="btnCancel" Click="btnCancel_Click" Content="Cancel" Margin="10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
+      <Button Name="btnCancel" Click="btnCancel_Click" Content="Cancel" Margin="40 10 10 10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
       <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
-      <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
+      <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10 10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
     </StackPanel>
   </Grid>
 </Window>
