--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -45,9 +45,9 @@
       </ListView>
       <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 10">
         <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
-        <Button Name="btnChat" Width="50" Margin="20 10" Content="Send"/>
+        <Button Name="btnChat" Click="btnChat_Click" Width="50" Margin="20 10" Content="Send"/>
       </StackPanel>
-      <ListView Name="lvChat" Grid.Row="2"/>
+      <ListBox Name="lbChat" Grid.Row="2"/>
     </Grid>
     <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="20,10,10,0" VerticalAlignment="Top" Width="290">
       <Grid.ColumnDefinitions>
