--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -30,11 +30,13 @@
     </Grid>
     <Grid HorizontalAlignment="Left" Height="630" Margin="10 10 0 0" VerticalAlignment="Top" Width="290">
       <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
         <RowDefinition Height="6*"/>
         <RowDefinition Height="2*"/>
         <RowDefinition Height="7*"/>
       </Grid.RowDefinitions>
-      <ListView Name="lvUsers" Grid.Row="0">
+      <Label Grid.Row="0" Background="#ffc" Foreground="#484" FontSize="18" Padding="5" BorderThickness="2" BorderBrush="#299" Margin="0 0 0 2" Name="lblCurrentUser" />
+      <ListView Name="lvUsers" Grid.Row="1">
         <ListView.View>
           <GridView>
             <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
@@ -43,11 +45,19 @@
           </GridView>
         </ListView.View>
       </ListView>
-      <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0 10">
+      <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10">
         <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
-        <Button Name="btnChat" Click="btnChat_Click" Width="50" Margin="20 10" Content="Send"/>
+        <Button Name="btnChat" Click="btnChat_Click" IsDefault="True" Width="50" Margin="20 10" Content="Send"/>
       </StackPanel>
-      <ListBox Name="lbChat" Grid.Row="2"/>
+      <ListBox Name="lbChats" Grid.Row="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListBox.ItemTemplate>
+          <DataTemplate>
+            <Grid>
+              <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+            </Grid>
+          </DataTemplate>
+        </ListBox.ItemTemplate>
+      </ListBox>
     </Grid>
     <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="20,10,10,0" VerticalAlignment="Top" Width="290">
       <Grid.ColumnDefinitions>
