--- a/WMRApp/Login.xaml
+++ b/WMRApp/Login.xaml
@@ -21,7 +21,7 @@
     <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Margin="5">
       <Button Name="btnCancel" Click="btnCancel_Click" Content="Cancel" Margin="40 10 10 10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
       <Button Name="btnSignup" Click="btnSignup_Click" Content="Sign up" Margin="10" Width="80" Height="50"  Foreground="#2ef" Background="#555" Padding="5" ></Button>
-      <Button Name="btnLogin" Click="btnLogin_Click" Content="Login" Margin="10 10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
+      <Button Name="btnLogin" IsDefault="True" Click="btnLogin_Click" Content="Login" Margin="10 10" Width="80" Height="50" Foreground="#2ef" Background="#555" Padding="5" ></Button>
     </StackPanel>
   </Grid>
 </Window>
