--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -28,7 +28,7 @@
 
       <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10 0">
         <TextBox Name="tbLocation" IsReadOnly="True" Width="400" Padding="15" VerticalAlignment="Center" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-        <Button Name="btnAddStop" Content="Add" Width="70" Margin="10" Padding="10" VerticalAlignment="Center" Click="btnAddStop_Click" />
+        <Button Name="btnAddStop" Content="Add" Width="70" Margin="10 0" Padding="10" VerticalAlignment="Center" Click="btnAddStop_Click" />
       </StackPanel>
     </Grid>
     <Grid HorizontalAlignment="Left" Height="630" Margin="10 10 0 0" VerticalAlignment="Top" Width="290">
@@ -39,7 +39,7 @@
         <RowDefinition Height="7*"/>
       </Grid.RowDefinitions>
       <Label Grid.Row="0" Background="#ffc" Foreground="#484" FontSize="18" Padding="5" BorderThickness="2" BorderBrush="#299" Margin="0 0 0 2" Name="lblCurrentUser" />
-      <ListView Name="lvUsers" Grid.Row="1">
+      <ListView Name="lvUsers" Grid.Row="1" BorderBrush="#299" BorderThickness="1">
         <ListView.View>
           <GridView>
             <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
@@ -52,7 +52,7 @@
         <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
         <Button Name="btnChat" Click="btnChat_Click" IsDefault="True" Width="50" Margin="20 10" Content="Send"/>
       </StackPanel>
-      <ListBox Name="lbChats" Grid.Row="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+      <ListBox Name="lbChats" Grid.Row="3" BorderBrush="#299" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
         <ListBox.ItemTemplate>
           <DataTemplate>
             <Grid>
@@ -64,35 +64,53 @@
     </Grid>
     <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="20,10,10,0" VerticalAlignment="Top" Width="290">
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="64*"/>
         <ColumnDefinition Width="227*"/>
       </Grid.ColumnDefinitions>
       <Grid.RowDefinitions>
-        <RowDefinition Height="50*"/>
-        <RowDefinition Height="50*"/>
-        <RowDefinition Height="50*"/>
-        <RowDefinition Height="108*"/>
-        <RowDefinition Height="284*"/>
-        <RowDefinition Height="77*"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
-      <ListBox Name="lbStops" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,107.5,0,0" Grid.RowSpan="2">
-        <ListBox.ItemTemplate>
-          <DataTemplate>
-            <Grid>
-              <TextBlock Text="{Binding}" />
-            </Grid>
-          </DataTemplate>
-        </ListBox.ItemTemplate>
-      </ListBox>
-      <Button Grid.Row="5" Content="Clear All" Padding="15 5" HorizontalAlignment="Right" Margin="0,20,50,20" Name="btnClear" Click="btnClear_Click" Width="76" Grid.Column="1" />
-      <Button Grid.Row="5" Content="Exit" Padding="15 5" HorizontalAlignment="Left" Margin="50,20,0,20" Name="btnExit" Click="btnExit_Click" Width="51" Grid.ColumnSpan="2" />
-      <Label Content="Location" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-      <Label Content="Date" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center"/>
-      <Label Content="Time" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center"/>
-      <TextBox Grid.Column="1" HorizontalAlignment="Center" Height="30"  TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="200"/>
-      <DatePicker Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="200"/>
-      <ComboBox Grid.Column="1" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" Width="200"/>
-      <Button Grid.ColumnSpan="2" Content="Add New Location" HorizontalAlignment="Center" Margin="0,20,0,0" Grid.Row="3" VerticalAlignment="Top" Width="100"/>
+      <Border BorderBrush="#299" BorderThickness="2" Background="#eff" Margin="0 3 0 0">
+        <Grid Grid.Row="0" >
+          <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="10*"/>
+          </Grid.RowDefinitions>
+          <Label Content="Searching for other drivers " VerticalAlignment="Center"/>
+          <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="3">
+            <Label Content="From:" Margin="5 0" Width="40" />
+            <TextBox Width="220" />
+          </StackPanel>
+          <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="3">
+            <Label Content="To:" Margin="5 0" Width="40" />
+            <TextBox Width="220" />
+          </StackPanel>
+          <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button Content="Search" Width="120" Height="24" Background="#799e" Foreground="#922" FontSize="16"/>
+          </StackPanel>
+          <ListBox Grid.Row="4" Margin="4" />
+        </Grid>
+      </Border>
+      <Grid Grid.Row="1" Margin="0 5 0 0">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="6*"/>
+          <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <ListBox Name="lbStops" Grid.Row="0" Margin="0,10" BorderBrush="#299" BorderThickness="1" >
+          <ListBox.ItemTemplate>
+            <DataTemplate>
+              <Grid>
+                <TextBlock Text="{Binding}" />
+              </Grid>
+            </DataTemplate>
+          </ListBox.ItemTemplate>
+        </ListBox>
+        <Button Grid.Row="1" Content="Clear All" HorizontalAlignment="Right" Name="btnClear" Click="btnClear_Click" Width="75" Margin="10 5 30 5"/>
+        <Button Grid.Row="1" Content="Exit" HorizontalAlignment="Left" Name="btnExit" Click="btnExit_Click" Width="75" Margin="30 5 10 5"/>
+      </Grid>
     </Grid>
   </Grid>
 </Window>
