--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
         xmlns:local="clr-namespace:WMRApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" Width="1200" WindowStartupLocation="CenterScreen" Activated="Window_Activated" Background="#eed" ResizeMode="CanResize">
+        Title="RouteCustom" Height="700" Width="1200" WindowStartupLocation="CenterScreen" Activated="Window_Activated" Background="#eed" ResizeMode="CanResize">
   <Grid Margin="5">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="3*"/>
@@ -74,24 +74,55 @@
         <Grid Grid.Row="0" >
           <Grid.RowDefinitions>
             <RowDefinition Height="3*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="4*"/>
+            <RowDefinition Height="3*"/>
             <RowDefinition Height="10*"/>
           </Grid.RowDefinitions>
-          <Label Content="Searching for other drivers " VerticalAlignment="Center"/>
+          <Label Content="INDICATE YOUR ROUTE:" VerticalAlignment="Center" FontWeight="SemiBold"/>
           <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="3">
-            <Label Content="From:" Margin="5 0" Width="40" />
-            <TextBox Width="220" />
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="220"/>
+              </Grid.ColumnDefinitions>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+              </Grid.RowDefinitions>
+              <Label Grid.Column="0" Grid.Row="0" Content="From:" />
+              <TextBox Grid.Column="1" Grid.Row="0" Name="tbFrom" Margin="3 0 0 0" />
+              <Label Grid.Column="1" Grid.Row="1" Content="Ex: Montreal, QC" FontSize="11" FontStyle="Italic"/>
+            </Grid>
           </StackPanel>
           <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="3">
-            <Label Content="To:" Margin="5 0" Width="40" />
-            <TextBox Width="220" />
+            <Grid>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="220"/>
+              </Grid.ColumnDefinitions>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+              </Grid.RowDefinitions>
+              <Label Grid.Column="0" Grid.Row="0" Content="To:" />
+              <TextBox Grid.Column="1" Grid.Row="0" Name="tbTo" Margin="3 0 0 0" />
+              <Label Grid.Column="1" Grid.Row="1" Content="Ex: Ottawa, ON" FontSize="11" FontStyle="Italic" />
+            </Grid>
+            
           </StackPanel>
           <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="Search" Width="120" Height="24" Background="#799e" Foreground="#922" FontSize="16"/>
+            <Button Name="btnSearch" Click="btnSearch_Click" Content="Search" Width="120" Height="24" Background="#799e" Foreground="#922" FontSize="16"/>
           </StackPanel>
-          <ListBox Grid.Row="4" Margin="4" />
+          <ListView Name="lvFoundUsers" Grid.Row="4" BorderBrush="#299" BorderThickness="1" Margin="4">
+            <ListView.View>
+              <GridView>
+                <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
+                <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}"/>
+                <GridViewColumn Header="User name" Width="120" DisplayMemberBinding="{Binding UserName}"/>
+              </GridView>
+            </ListView.View>
+          </ListView>
         </Grid>
       </Border>
       <Grid Grid.Row="1" Margin="0 5 0 0">
