Add delete button

--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -22,7 +22,8 @@
         <m:Map Grid.Row="0" Name="MyMap" 
                CredentialsProvider="AhOYVsCHeLfCM2LttVNiVAK6mUGtJmjRlevk_2qjuzV9J-gNrsj6z6MD5XREJN1h" 
                ZoomLevel="11" Center="45.501689,-73.567256" 
-               MouseDoubleClick="MyMap_MouseDoubleClick">
+               MouseDoubleClick="MyMap_MouseDoubleClick"
+               >
         </m:Map>
       </Border>
 
@@ -105,7 +106,7 @@
           <RowDefinition Height="6*"/>
           <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <ListBox Name="lbStops" Grid.Row="0" Margin="0,10" BorderBrush="#299" BorderThickness="1" >
+        <ListBox Name="lbStops"  Grid.Row="0" Margin="0,10" BorderBrush="#299" BorderThickness="1" >
           <ListBox.ItemTemplate>
             <DataTemplate>
               <Grid>
@@ -114,9 +115,10 @@
             </DataTemplate>
           </ListBox.ItemTemplate>
         </ListBox>
-        <Button Grid.Row="1" Content="Clear All" HorizontalAlignment="Right" Name="btnClear" Click="btnClear_Click" Width="75" Margin="10 5 30 5"/>
-        <Button Grid.Row="1" Content="Exit" HorizontalAlignment="Left" Name="btnExit" Click="btnExit_Click" Width="75" Margin="30 5 10 5"/>
-      </Grid>
+        <Button Grid.Row="1" Content="Clear All" HorizontalAlignment="Center" Name="btnClear" Click="btnClear_Click" Width="75" />
+        <Button Grid.Row="1" Content="Exit" HorizontalAlignment="Right" Name="btnExit" Click="btnExit_Click" Width="75" />
+         <Button Grid.Row="1" Content="Delete" Click="btnDelete_Click" HorizontalAlignment="Left" Name="btnDelete" Width="75"/>
+            </Grid>
     </Grid>
   </Grid>
 </Window>
